--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=Zombieland
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Zombieland/Levels/FirstLevel.FirstLevel
-GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
+EditorStartupMap=/Game/Zombieland/Levels/MenuLevel.MenuLevel
+GameDefaultMap=/Game/Zombieland/Levels/MenuLevel.MenuLevel
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
